# reflex-vla

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.arm64  Dockerfile.jetpack  GOALS.yaml  README.md  THIRD_PARTY_LICENSES.md  download_references.sh  install.sh  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-publish-arm64.yml  pytest.yml  welcome_good_first_issue.yml
assets/: README.md
docs/: a2c2.md  auto_calibrate.md  cuda_graphs.md  doctor_check_list.md  doctor_output_schema.json  embodiment_schema.md  getting_started.md  mcp.md  slo.md
examples/: 01-chat-quickstart.md  02-deploy-smolvla-jetson.md  03-distill-pi05.md  04-record-and-replay.md  05-multi-gpu-serve.md  README.md
examples/01_circle_tap_so100/: README.md
examples/multi-gpu/: docker-compose.yml
infra/contribution-worker/: README.md  deploy.sh  schema.sql  worker.js  wrangler.toml
infra/contribution-worker/migrations/: 2026-05-05-revoke-cascade-stages.sql
infra/data-worker/: schema.sql  worker.js  wrangler.toml
infra/license-worker/: wrangler.toml
infra/telemetry-worker/: worker.js
infra/telemetry-worker/migrations/: 001_free_tier_fields.sql
launch/: ANNOUNCEMENT.md  README.md  lerobot_3146_draft.md  reddit_robotics_draft.md  show_hn_draft.md
outreach/: gmi-cloud-credits-ask.md
reflex_context/: measured_numbers.md
reflex_context/01_architecture/: docker_arm64_plan.md  finetune_SYNTHESIS.md  finetune_architecture.md  finetune_competitive_research.md  finetune_roadmap.md  finetune_sota_research.md  orin_nano_fp16_plan.md
reflex_context/05_sessions/: 2026-04-19_evening_gr00t_vlm_libero_onnx_polish.md
scripts/: install_digest.py  local_phoenix_smoke.py  local_record_smoke.py  modal_a2c2_real_traces.py  modal_act_from_scratch_smoke.py  modal_action_fast_path_smoke.py  modal_b4_gate_fire.py  modal_curate_rlds_smoke.py  modal_customer_dogfood.py  modal_docker_smoke_test.py  modal_export_pi05_libero_teacher.py  modal_export_snapflow_student.py  modal_finetune_parity.py  modal_flashrt_bench.py  modal_fp16_convert.py  modal_fp16_parity.py  modal_fp16_snapflow_student.py  modal_fresh_install_test.py  modal_gr00t_e2e_chain_test.py  modal_gr00t_eagle_vlm_export.py  modal_gr00t_state_encoder_sanity.py  modal_gr00t_vlm_parity.py  modal_hf_push_snapflow_v031.py  modal_latency_pi05_decomposed.py  modal_latency_v050_decomposed.py  modal_layer_pruning_lockstep_spike.py  modal_layer_pruning_profile.py  modal_layer_pruning_reexport_spike.py  modal_libero_lerobot_native.py  modal_libero_pi05_decomposed.py  modal_libero_via_reflex_serve.py  modal_ort_concurrent_streams_spike.py  modal_per_step_e2e_latency.py  modal_per_step_overhead.py  modal_record_demo_gif.py  modal_reflex_distill.py  modal_reflex_finetune.py  modal_remeasure_calibration_defaults.py  modal_ros2_live_test.py  modal_serve_roundtrip_test.py  (+11 more)
src/reflex/: __init__.py  ci_template.py  cli.py  onboarding.py  upgrade_check.py
src/reflex/bench/: __init__.py  methodology.py  report.py
src/reflex/bench/games/: __init__.py
src/reflex/chat/: executor.py  loop.py  schema.py  tui.py
src/reflex/client/: __init__.py  client.py
src/reflex/correction/: a2c2_training.py
src/reflex/curate/: __init__.py  consent.py  free_collector.py  messaging.py  nudge_engine.py  opt_in_cli.py  uploader.py
src/reflex/curate/dedup/: __init__.py  canonical.py  cluster.py  phash.py  pipeline.py  trajectory.py
src/reflex/curate/failure_classifier/: __init__.py  composite.py  modes.py  primary.py
src/reflex/curate/format_converters/: __init__.py  base.py  hdf5.py  lerobot_v3.py  openx_embodiment.py  rlds.py
src/reflex/curate/metadata/: __init__.py  composite.py  difficulty.py  language.py  (+2 more)
src/reflex/diagnostics/: __init__.py  check_action_denorm.py  check_cuda_graphs.py  check_gpu_memory.py  check_gripper.py  check_hardware_compat.py  check_libero_importable.py  check_modal_auth.py  check_rtc_chunks.py  check_state_proprio.py  check_vla_eval_importable.py
src/reflex/distill/: __init__.py  snapflow.py  snapflow_pi0_model.py  teacher_loader.py
src/reflex/eval/: libero.py  video.py
src/reflex/exporters/: decomposed.py  fp16_convert.py  monolithic.py  pi0_exporter.py  pi0_prefix_exporter.py
src/reflex/finetune/: __init__.py  cli.py  cli_distill.py  config.py  run.py
src/reflex/kernels/: a2c2_correction.py
src/reflex/mcp/: server.py
src/reflex/observability/: prometheus.py
src/reflex/pro/: __init__.py  _public_key.py  hf_hub.py  license.py  telemetry.py  upload.py
src/reflex/registry/: data.py
src/reflex/replay/: __init__.py  cli.py
src/reflex/runtime/: a2c2_hook.py  action_fast_path.py  auth.py  batching.py  calibration.py  cuda_graphs.py  decomposed_server.py  episode_cache.py  fallback.py  pi05_decomposed_server.py  pi0_onnx_server.py  policy.py  record.py  rtc_adapter.py  server.py  slo.py  smolvla_native.py  smolvla_onnx_server.py  tracing.py  two_policy_dispatcher.py
src/reflex/traces/: __init__.py  archive.py
src/reflex/validation/: __init__.py  dataset_checks.py
tests/: conftest.py  test_a2c2_runtime_hook.py  test_a2c2_serve_integration.py  test_action_fast_path.py  test_auth.py  test_batching.py  test_bench_methodology.py  test_chat_regression.py  test_chat_tools_executable.py  test_check_cuda_graphs.py  test_cli_export_end_to_end.py  test_client.py  test_cuda_graphs.py  test_curate_consent.py  test_curate_dedup.py  test_curate_failure_classifier.py  test_curate_format_converters.py  test_curate_free_collector.py  test_curate_metadata.py  test_curate_opt_in_cli.py  test_curate_quality.py  test_curate_uploader.py  test_curate_uploader_integration.py  test_data_worker.py  test_dataset_validator.py  test_decomposed_server.py  test_diagnostics_eval_checks.py  test_docker_arm64.py  test_doctor_blackwell_guard.py  test_doctor_diagnostics.py  test_doctor_guards.py  test_embodiments.py  test_episode_cache_bytes.py  test_episode_cache_utils.py  test_eval_cli.py  test_eval_libero.py  test_eval_video.py  test_export_mode.py  test_fallback.py  test_finetune.py  (+25 more)
(+43 files in other folders)
