[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reflex-vla"
version = "0.4.0"
description = "Deploy any VLA model to any edge hardware. Now with reflex chat — natural-language CLI."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Reflex Labs" }]
keywords = ["vla", "robotics", "edge", "tensorrt", "jetson", "deployment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "torch>=2.1.0",
    "safetensors>=0.4.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    # Always needed: hub access for `reflex export <hf_id>` and tokenizer/config
    # loading for the auto-detect path. Apr-14 install-path verification caught
    # that omitting these breaks `reflex export` even with [serve,gpu].
    "huggingface_hub>=0.20.0",
    # Base allows 4.40 → 5.3.x. [monolithic] extra pins ==5.3.0 exactly (5.4+ has
    # a q_length regression that breaks onnx-diagnostic patches). Without the
    # upper bound, pip would pull 5.4/5.5 here and conflict with [monolithic].
    # Without raising the upper bound past 5.0, [monolithic] can't install
    # alongside the base (the v0.2.1 customer-dogfood finding).
    "transformers>=4.40,<5.4",
    "onnx>=1.15.0",
    "onnxscript>=0.1.0",
    # ReflexClient (Phase 0.5 customer-sdk) — sync + async HTTP client.
    # Lightweight (~2MB); shared with [serve] which already needs FastAPI's
    # starlette/anyio stack. Adding here so `from reflex import ReflexClient`
    # works on a bare `pip install reflex-vla`.
    "httpx>=0.24.0",
]

[project.optional-dependencies]
# CPU inference runtime (onnx is a core dep now). Use this for CPU-only boxes.
onnx = ["onnxruntime>=1.17.0"]
# GPU inference — installs onnxruntime-gpu AND the ORT-compatible CUDA stack.
# Use this when deploying to a box with an NVIDIA GPU. ORT 1.20+ wants CUDA 12.x
# and cuDNN 9.x; these pip deps ship their own libs so the end-user doesn't have
# to install CUDA separately. Apr-14 post-mortem: omitting these was the cause
# of silent CPU fallback in v0.1 benchmarks.
gpu = [
    "onnxruntime-gpu>=1.20,<1.24",
    "nvidia-cudnn-cu12>=9.0,<10.0",
    "nvidia-cublas-cu12>=12.0,<13.0",
]
# tensorrt = ["tensorrt>=10.0"]  # install on Linux/Jetson only: pip install tensorrt
# HTTP serve stack. Includes onnxruntime (CPU) so `pip install reflex-vla[serve]`
# gives you a working server out of the box. For GPU, use `[serve,gpu]` to pull in
# onnxruntime-gpu + CUDA libs.
serve = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "Pillow>=10.0.0",
    # Embodiment-config validation (per-embodiment-configs B.1). Tiny dep.
    "jsonschema>=4.0",
    # Prometheus /metrics endpoint (D.1.8 prometheus-grafana). Tiny dep.
    "prometheus-client>=0.19.0",
]
safety = ["yourdfpy"]
# Native parity verification — installs lerobot + its deps so
# `scripts/local_full_diff.py` can cross-check our export path against the
# reference PyTorch policy. Required for the native-path-parity regression
# gate in GOALS.yaml. Heavy (pulls torch, torchvision, accelerate, etc.) —
# that's why it's a separate extra, not a base dep.
native = [
    "lerobot==0.5.1",
    "num2words",
]
# Monolithic ONNX export — cos=1.0 verified production path. Runs locally
# via `reflex export --monolithic` (the DEFAULT as of v0.2.1). Requires
# transformers==5.3.0 EXACTLY (5.4+ has a q_length regression in
# masking_utils.sdpa_mask that breaks onnx-diagnostic patches). Base pin
# `transformers>=4.40,<5.4` permits this extra to pin-to-exact.
monolithic = [
    "lerobot==0.5.1",
    "transformers==5.3.0",
    "onnx-diagnostic>=0.9",
    "onnxscript>=0.1",
    "optree",
    "scipy",
    "num2words",
]
# Task-success evaluation (heavy sim deps). Gated behind this extra so the
# base install stays light. Use with `reflex bench --benchmark libero_10`.
eval = [
    "vla-eval",
    "mujoco>=3.0",
    "robosuite==1.4.1",
    "gymnasium",
    "h5py",
]
dev = ["pytest>=8.0", "ruff>=0.4.0", "mypy>=1.10", "httpx>=0.24.0", "pytest-asyncio>=0.23"]
# MCP server — exposes Reflex as a Model Context Protocol tool surface so
# agents (Claude Desktop, Cursor, custom) can call /act as a tool. Additive
# to the REST API; both transports share the same inference engine.
# Feature spec: features/01_serve/subfeatures/_dx_gaps/mcp-server/mcp-server.md
mcp = ["fastmcp>=3.0"]
# Full-screen TUI for `reflex chat --tui`. Optional (the default Rich REPL
# works without textual). Adds a multi-panel layout (transcript / tool calls
# / input / status) with mouse + scroll-back + keyboard shortcuts.
tui = ["textual>=0.80,<10"]
# OTel record/replay backend integration (Phoenix-compatible). Optional —
# server runs fine without it; if installed AND OTEL_EXPORTER_OTLP_ENDPOINT
# is set, every /act call emits an OTel span with VLA-specific attributes.
# Phoenix is the recommended local backend (`pip install arize-phoenix`,
# `phoenix serve`). See features/01_serve/subfeatures/_rtc_a2c2/record-replay.md.
tracing = [
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30",
]
# Real-Time Chunking adapter (B.3). Pulls in lerobot's RTC module so
# `reflex serve --rtc` can wrap inference with the canonical RTCProcessor.
# Lerobot is heavy (torch + vision + datasets); only install when serving
# RTC-enabled deployments. Skeleton + config validation work without this
# extra; only the actual processor construction needs it.
rtc = [
    "lerobot==0.5.1",
]

[project.scripts]
reflex = "reflex.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/reflex"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
# pytest-asyncio v1.x requires explicit mode declaration. Tests use
# @pytest.mark.asyncio decorators (strict mode); auto mode treats every
# async def as an async test which we don't want (some async helpers
# inside sync tests would be misinterpreted).
asyncio_mode = "strict"
markers = [
    "asyncio: mark a coroutine test for pytest-asyncio (strict mode)",
]
